# Incluir CTest
include(CTest)

# Especificar los archivos fuente para las pruebas
set(TEST_SOURCES
    test.cc
)

# Crear el ejecutable para las pruebas
add_executable(test_runner ${TEST_SOURCES})

# Asegúrate de que los encabezados del proyecto sean encontrados
include_directories(${CMAKE_SOURCE_DIR}/src)

# Enlazar las bibliotecas necesarias
target_link_libraries(test_runner PRIVATE algorithms graph utils)

# Agregar pruebas con CTest
add_test(NAME TestKruskal COMMAND test_runner)
add_test(NAME TestTravelingSalesman COMMAND test_runner)
add_test(NAME TestFordFulkerson COMMAND test_runner)
add_test(NAME TestClosestPoint COMMAND test_runner)

# Si estás usando cobertura
if(CODE_COVERAGE)
    target_compile_options(test_runner PRIVATE --coverage)
    target_link_options(test_runner PRIVATE --coverage)
endif()
